Fixed Java 1.3 compile error